Update _posts/2025-02-08-test-post.md (via Pages CMS)

--- a/_posts/2025-02-08-test-post.md
+++ b/_posts/2025-02-08-test-post.md
@@ -1,12 +1,7 @@
 ---
 title: TEST POST
 date: 2025-02-08
-categories: |-
-  \-cool thing
-
-  \-test
-
-  \-neat
+categories: <p>cool,neat,wow</p>
 metadate: hide
 image: /assets/images/il_1140xN.6669751471_liop.avif
 ---
