--- a/_posts/2025-02-08-test-post.md
+++ b/_posts/2025-02-08-test-post.md
@@ -1,6 +1,7 @@
 ---
 title: TEST POST
 date: 2025-02-08 17:18
+categories: test this_is_cool wow
 metadate: hide
 image: /assets/images/il_1140xN.6669751471_liop.avif
 ---
