--- a/_posts/2025-02-08-test-post.md
+++ b/_posts/2025-02-08-test-post.md
@@ -1,7 +1,10 @@
 ---
 title: TEST POST
 date: 2025-02-08 17:18
-categories: test,this_is_cool,wow
+categories: |-
+  - cool
+  - wow
+  - this_is_a_test
 metadate: hide
 image: /assets/images/il_1140xN.6669751471_liop.avif
 ---
