Update _posts/2025-02-08-test-post.md (via Pages CMS)

--- a/_posts/2025-02-08-test-post.md
+++ b/_posts/2025-02-08-test-post.md
@@ -2,9 +2,9 @@
 title: TEST POST
 date: 2025-02-08 17:18
 categories: |-
-  - cool
-  - wow
-  - this_is_a_test
+  cool
+  wow
+  this_is_a_test
 metadate: hide
 image: /assets/images/il_1140xN.6669751471_liop.avif
 ---
