Update _posts/2025-02-08-test-post.md (via Pages CMS)

--- a/_posts/2025-02-08-test-post.md
+++ b/_posts/2025-02-08-test-post.md
@@ -1,10 +1,7 @@
 ---
 title: TEST POST
 date: 2025-02-08 17:18
-categories:
-  - cool
-  - wow
-  - this_is_a_test
+categories: cool,wow,this_is_a_test,neat
 metadate: hide
 image: /assets/images/il_1140xN.6669751471_liop.avif
 ---
