--- a/_posts/2025-02-08-test-post.md
+++ b/_posts/2025-02-08-test-post.md
@@ -7,4 +7,4 @@ image: /assets/images/il_1140xN.6669751471_liop.avif
 ---
 cool test!
 
-![](/assets/images/logo.png)
+![](/assets/images/il_1140xN.6669751471_liop.avif)
