Update _posts/2025-02-08-test-2.md (via Pages CMS)

--- a/_posts/2025-02-08-test-2.md
+++ b/_posts/2025-02-08-test-2.md
@@ -1,7 +1,7 @@
 ---
 title: test 2
 date: 2025-02-08 20:54
-categories: cool wow
+categories: "[cool, wow]"
 metadate: hide
 image: /assets/images/VDesignPlainL.png
 ---
