one and done fix

--- a/_posts/2025-02-11-cute-cats.md
+++ b/_posts/2025-02-11-cute-cats.md
@@ -1,7 +1,7 @@
 ---
 title: Cute Cats
 date: 2025-02-04 11:05
-categories: oneanddone
+categories: one_and_done
 metadate: hide
 image: /assets/images/476839213_18000599357727264_1704703973272116423_n.jpg
 ---
